k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.1-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /data/postgres
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-script
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
        - name: postgres-script
          persistentVolumeClaim:
            claimName: postgres-script-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  # TODO Investigate why this type can't be ClusterIP
  # See https://k3d.io/v5.0.1/usage/exposing_services/#1-via-ingress-recommended
  type: LoadBalancer
  ports:
    - name: tcp
      protocol: TCP
      port: 50001
      targetPort: 8080
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: k3d-registry42:5050/order:1.0-SNAPSHOT
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  # TODO Investigate why this type can't be ClusterIP
  # See https://k3d.io/v5.0.1/usage/exposing_services/#1-via-ingress-recommended
  type: LoadBalancer
  ports:
    - name: tcp
      protocol: TCP
      port: 50002
      targetPort: 8080
  selector:
    app: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: k3d-registry42:5050/payment:1.0-SNAPSHOT
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  # TODO Investigate why this type can't be ClusterIP
  # See https://k3d.io/v5.0.1/usage/exposing_services/#1-via-ingress-recommended
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 50003
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 50013
      targetPort: 50013
  selector:
    app: shipping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: shipping
          image: k3d-registry42:5050/shipping:1.0-SNAPSHOT
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ing
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    # This HTTP request goes internally from the ingress to internal services
    - http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 50001
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 50002
          - path: /shipping
            pathType: Prefix
            backend:
              service:
                name: shipping
                port:
                  number: 50003
